pridane vizualne vlastnosti stranky

--- a/templates/kurzyPOST.html
+++ b/templates/kurzyPOST.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>kurz-registrovany</title>
+    <link rel = "stylesheet" href="{{ url_for('static', filename = 'main.css') }}">
 </head>
 
 <body>
@@ -11,6 +12,5 @@
     <h2>Kurz bol úspešne zaregistrovaný!</h2>
         <hr>
         <a href="/">Späť</a>
-
 </body>
 </html>
