--- a/templates/kurzyGET.html
+++ b/templates/kurzyGET.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Vkladanie kurzu</title>
+    <link rel = "stylesheet" href="{{ url_for('static', filename = 'main.css') }}">
 </head>
 
 <body>
