--- a/templates/registraciaPOST.html
+++ b/templates/registraciaPOST.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Registracia_trenera</title>
+    <link rel = "stylesheet" href="{{ url_for('static', filename = 'main.css') }}">
 </head>
 
 <body>
