--- a/templates/miesta.html
+++ b/templates/miesta.html
@@ -11,7 +11,7 @@
     <h2>Zoznam miest:</h2>
 
     {% for miesto in miesta: %}
-        <p>{{ miesto }}</p>
+        <p>{{ miesto.Nazov_miesta }} (ID: {{ miesto.ID_miesta }})</p>
     {% endfor %}
 
     <a href="/">Späť</a>
