preklad do angličtiny
pridali sme angličtinu, prekladali sme nazvy, nadpisy, buttony...

--- a/templates/kapacita.html
+++ b/templates/kapacita.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="sk">
 <html>
 <head>
     <meta charset="UTF-8">
@@ -8,10 +9,10 @@
 
 <body>
 
-    <h2>Súčet max. kapacity kurzov na "P":</h2>
+    <h2>{{t.capacity}}</h2>
     <p>{{ kapacita }}</p>  <!-- TU je fix: zobrazenie čísla priamo -->
 
-    <a href="/">Späť</a>
+    <a href="/">{{t.back}}</a>
 
 </body>
 </html>
