--- a/templates/uvodna.stranka.html
+++ b/templates/uvodna.stranka.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<htmo lang ="sk"></htmo>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -7,13 +8,13 @@
 </head>
 
 <body>
-    <h1>Výber z databázy</h1>
-        <a href="/registracia"><button>registracia trenera</button></a>
-        <a href="/sifrovanie"><button>registracia kurzu</button></a>
-        <a href="/kurzyAtreneri"><button>treneri a ich kurzy</button></a>
-        <a href="/kurzy"><button>vsetky kurzy</button></a>
-        <a href="/miesta"><button>vsetky miesta</button></a>
-        <a href="/kapacita"><button>sucet max. kapacity kurzov na "P"</button></a>
+    <h1>{{t.uvod}}</h1>
+        <a href="/registracia"><button>{{t.registracia_trenera}}</button></a>
+        <a href="/sifrovanie"><button>{{t.registracia_kurzu}}</button></a>
+        <a href="/kurzyAtreneri"><button>{{t.treneri_kurzy}}</button></a>
+        <a href="/kurzy"><button>{{t.vsetky_kurzy}}</button></a>
+        <a href="/miesta"><button>{{t.vsetky_miesta}}</button></a>
+        <a href="/kapacita"><button>{{t.max_kapacita}}</button></a>
         <hr>
 </body>
 </html>
