--- a/templates/kurzy.html
+++ b/templates/kurzy.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="sk">
 <html>
 <head>
     <meta charset="UTF-8">
@@ -7,13 +8,13 @@
 </head>
 
 <body>
-    <h2>Zoznam kurzov:</h2>
+    <h2>{{ t.courses_list }}</h2>
 
     {% for kurz in kurzy: %}
         <p>{{ kurz.Nazov_kurzu }} (ID: {{ kurz.ID_kurzu }})</p>
     {% endfor %}
 
-    <a href="/">Späť</a>
+    <a href="/">{{ t.back }}</a>
 
 </body>
 </html>
