--- a/templates/registraciaGET.html
+++ b/templates/registraciaGET.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="sk"></html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -7,27 +8,27 @@
 </head>
 
 <body>
-    <h2 class=".registracia">Registrácia trénera</h2>
+    <h2 class=".registracia">{{t.registracia_title}}</h2>
         <form action="/registracia" method="post">
-            <label>Meno:</label><br>
+            <label>{{t.meno}}</label><br>
             <input type="text" name="meno" required><br><br>
 
-            <label>Priezvisko:</label><br>
+            <label>{{t.priezvisko}}</label><br>
             <input type="text" name="priezvisko" required><br><br>
 
-            <label>Špecializácia:</label><br>
+            <label>{{t.specializacia}}</label><br>
             <input type="text" name="specializacia" required><br><br>
 
-            <label>Telefón:</label><br>
+            <label>{{t.telefon}}</label><br>
             <input type="text" name="telefon" required><br><br>
 
-            <label>Heslo:</label><br>
+            <label>{{t.heslo}}</label><br>
             <input type="password" name="heslo" required><br><br>
 
-            <button type="submit">Registrovať</button>
+            <button type="submit">{{t.registrovat}}</button>
         </form>
         <hr>
-        <a href="/">Späť</a>
+        <a href="/">{{t.back}}</a>
 
 </body>
 </html>
