--- a/templates/registraciaPOST.html
+++ b/templates/registraciaPOST.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-    <h2>Tréner bol úspešne zaregistrovaný!</h2>
+    <h2>{{t.trener_oznam}}</h2>
         <hr>
-        <a href="/">Späť</a>
+        <a href="/">{{t.back}}</a>
 
 </body>
 </html>
