--- a/templates/kurzyPOST.html
+++ b/templates/kurzyPOST.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <h2>Kurz bol úspešne zaregistrovaný!</h2>
+    <h2>{{t.oznam_kurzy}}</h2>
         <hr>
         <a href="/">Späť</a>
 </body>
